--- a/jclient-common-impl-ning/pom.xml
+++ b/jclient-common-impl-ning/pom.xml
@@ -21,14 +21,15 @@
 		<dependency>
 			<groupId>org.asynchttpclient</groupId>
 			<artifactId>async-http-client</artifactId>
-			<version>2.1.0-RC1</version>
 			<!--<version>2.0.37</version>-->
-			<exclusions>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-epoll</artifactId>
-				</exclusion>
-			</exclusions>
+			<!--<version>2.1.0-RC1</version>-->
+			<!--<exclusions>-->
+				<!--<exclusion>-->
+					<!--<groupId>io.netty</groupId>-->
+					<!--<artifactId>netty-transport-native-epoll</artifactId>-->
+				<!--</exclusion>-->
+			<!--</exclusions>-->
+			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
 
