- fully working spring context with modules, java/scanning example

--- a/jlogic/pom.xml
+++ b/jlogic/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>jdebug</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.0.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 </project>
