--- a/jclient-common-impl-fake/pom.xml
+++ b/jclient-common-impl-fake/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>jclient-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+    </dependencies>
 
 </project>
